--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
 </head>
 
+  <h1 class="title">HOVERS</h1>
+
   <div class="boxwrapper">
     <div class="box"></div>
     <div class="box"></div>
