Added main html page

--- a/hovers.html
+++ b/hovers.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Lorem</title>
+    <link rel="stylesheet" type="text/css" href="style_hovers.css">
+    <title>Hovers</title>
     <meta charset="UTF-8">
 </head>
 
