--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style_main.css">
-    <title>Hovers</title>
+    <link rel="stylesheet" type="text/css" href="style_index.css">
+    <title>Sandbox Website</title>
     <meta charset="UTF-8">
 </head>
-<h1>WOW</h1>
+<div class="title"><h1 class="wow">WOW</h1>
