--- a/hovers.html
+++ b/hovers.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style_hovers.css">
-    <title>Hovers</title>
+    <title>Sandbox Website - Hovers</title>
     <meta charset="UTF-8">
 </head>
 
