corrected text shadow gradient

--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
     <title>Sandbox Website</title>
     <meta charset="UTF-8">
 </head>
-<div class="title"><h1 class="wow">WOW</h1>
+<div class="title">
+    <h1 class="wow">WOW</h1>
+    <h1 class="wow2">WOW</h1>
+</div>
