--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <div class="title">
     <h1 class="wow">WOW</h1>
-    <h1 class="wow2">WOW</h1>
+    <h1 class="wow_glow">WOW</h1>
+    <h2 class="interpretation">A <span class="highlighted_header_text">NEW</span> interpretation of web design</h2>
+
 </div>
