Changed hard-coded values to variables

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Sandbox Website</title>
     <meta charset="UTF-8">
 </head>
+
 <div class="title">
     <h1 class="wow">WOW</h1>
     <h1 class="wow_glow">WOW</h1>
+</div>
+<div class="presentation">
     <h2 class="interpretation">A <span class="highlighted_header_text">NEW</span> interpretation of web design</h2>
-
 </div>
