--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
 </div>
 <div class="presentation">
     <h2 class="interpretation">A <span class="highlighted_header_text">NEW</span> interpretation of web design</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut libero porta, viverra nulla at, semper nisi. Aliquam tristique vitae orci tincidunt finibus.</p>
 </div>
