--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style_index.css">
+    <link rel="stylesheet" href="style_index.css">
+    <script src="app.js"></script>
     <title>Sandbox Website</title>
     <meta charset="UTF-8">
 </head>
